# boredapp

./: fix_dates.sql  package-lock.json  package.json
public/: attendance_2026-01-06 (1).xls  attendance_2026-01-06.csv  attendance_2026-01-06.xls
src/: App.jsx  AttendanceActions.css  AttendanceActions.jsx  AttendanceTablePage.css  AttendanceTablePage.jsx  Clock.css  Clock.jsx  Dashboard.css  Dashboard.jsx  HolidayForm.css  HolidayForm.jsx  LoginPage.jsx  Loginpage.css  SettingsModal.css  SettingsModal.jsx  SettingsPage.css  SettingsPage.jsx  TodayStatus.css  TodayStatus.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs
src-tauri/src/repositories/: attendance_repo.rs  auth_repo.rs  calendar_repo.rs  leave_repo.rs  mod.rs  office_repo.rs  user_repo.rs
src-tauri/src/services/: attendance_service.rs  auth_service.rs  calendar_service.rs  leave_service.rs  mod.rs  office_service.rs  user_service.rs
src/components/: Navbar.css  Navbar.jsx  SettingsSidebar.css  SettingsSidebar.jsx  Sidebar.css  Sidebar.jsx
src/components/ui/: button.jsx  textarea.jsx
src/lib/: calendar.js  calendar_2080_2084.json
